fix(cython): resolve compilation errors in marketmarket_simulator_wrapper and environment
- Fix environment.pyx: add missing isfinite import from libc.math (line 285)
- Fix marketmarket_simulator_wrapper.pyx: add inline C++ helpers to bypass Cython 3.0.10 std::array limitations
  - Added _set_regime_dist_from_ptr() helper function
  - Added _set_liquidity_seas_from_ptr() helper function
  - Updated set_regime_distribution() and set_liquidity_seasonality() to use helpers
- Fix pyproject.toml: add requires-python and authors fields to resolve setuptools warnings

All 9 Cython modules now compile successfully to C/C++.
Generated marketmarket_simulator_wrapper.cpp (806KB) confirms successful compilation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ build-backend = "setuptools.build_meta"
 name = "ai-quant-platform"
 version = "0.1.0"
 description = "AI-Powered Quantitative Research Platform - Cython/C++ extensions: LOB and microstructure generator"
+requires-python = ">=3.12"
+authors = [{name = "TradingBot2 Team"}]
 dependencies = [
     "numpy>=1.24.0",
     "optuna>=3.0.0,<4.0.0",
