--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,6 +12,11 @@
 # =============================================================================
 
 # -----------------------------------------------------------------------------
+# Dependency locking
+# -----------------------------------------------------------------------------
+pip-tools>=7.4.0,<8.0.0
+
+# -----------------------------------------------------------------------------
 # Testing
 # -----------------------------------------------------------------------------
 pytest>=7.4.0,<9.0.0
