--- a/configs/runtime.yaml
+++ b/configs/runtime.yaml
@@ -38,3 +38,33 @@ ops:
     flag_path: null          # File path acting as external kill flag
     alert_command: null      # Command to execute when kill switch triggers
     # Manual reset: delete the flag file or call ops_kill_switch.manual_reset()
+
+# Runtime security controls applied in live mode.
+security:
+  strategy_fs:
+    mode: read_only            # Enforce read-only filesystem for strategy code
+    allow_write_paths:         # Explicitly whitelisted write targets
+      - logs
+      - artifacts
+      - state
+      - tmp
+  network:
+    enforce: true              # Restrict outbound hosts for adapters
+    allow_subdomains: true
+    allowed_hosts:
+      - api.binance.com
+      - fapi.binance.com
+      - dapi.binance.com
+      - stream.binance.com
+      - fstream.binance.com
+      - data.binance.vision
+      - api.alpaca.markets
+      - paper-api.alpaca.markets
+      - data.alpaca.markets
+      - api.polygon.io
+      - api-fxtrade.oanda.com
+      - api-fxpractice.oanda.com
+      - api.ig.com
+    allowed_cidrs:
+      - 127.0.0.0/8
+      - ::1/128
