--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -46,6 +46,11 @@ isort>=5.13.0,<6.0.0             # Import sorter
 pre-commit>=3.6.0,<4.0.0
 
 # -----------------------------------------------------------------------------
+# Security & Audit
+# -----------------------------------------------------------------------------
+pip-audit>=2.7.0,<3.0.0
+
+# -----------------------------------------------------------------------------
 # Documentation
 # -----------------------------------------------------------------------------
 mkdocs>=1.5.0,<2.0.0
