--- a/pyproject.toml
+++ b/pyproject.toml
@@ -161,9 +161,11 @@ dev = [
     "ruff>=0.1.9,<1.0.0",            # Fast Python linter
     "black>=23.12.0,<25.0.0",
     "isort>=5.13.0,<6.0.0",
+    "import-linter>=2.7.0,<3.0.0",
 
     # Pre-commit hooks
     "pre-commit>=3.6.0,<4.0.0",
+    "detect-secrets>=1.5.0,<2.0.0",
 ]
 
 # Documentation
