--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -39,6 +39,7 @@ pandas-stubs>=2.1.0,<3.0.0
 ruff>=0.1.9,<1.0.0               # Fast Python linter (replaces flake8, isort, etc.)
 black>=23.12.0,<25.0.0           # Code formatter
 isort>=5.13.0,<6.0.0             # Import sorter
+import-linter>=2.7.0,<3.0.0      # Architectural import contracts
 
 # -----------------------------------------------------------------------------
 # Pre-commit Hooks
@@ -49,6 +50,7 @@ pre-commit>=3.6.0,<4.0.0
 # Security & Audit
 # -----------------------------------------------------------------------------
 pip-audit>=2.7.0,<3.0.0
+detect-secrets>=1.5.0,<2.0.0     # Secret scanner with baseline support
 
 # -----------------------------------------------------------------------------
 # Documentation
